crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-15.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/issue-642-repro.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:21:9
   |
16 | /         with:
17 | |           cache-binary: true
18 | |           version: latest
   | |_________________________^ opt-in for caching here
19 |
20 |         - name: Build docker
21 |           uses: docker/build-push-action@48aba3b46d1b1fec4febb7c5d0c644b249a11355
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ runtime artifacts usually published here
   |
   = note: audit confidence → Low

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
